--- a/styles/sylesdonation.css
+++ b/styles/sylesdonation.css
@@ -178,3 +178,100 @@ p3 {
     font-size: 30px;
 
 }
+.coluna {
+    display: flex;
+    width: 100% ;
+    margin-bottom: 150px;
+   
+}
+.coluna_form {
+    width: 50%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    
+}
+.form {
+    margin-top: 100px;
+    text-align: center;
+    width: 100%;
+    max-width: 600px;
+    align-items: center;
+    justify-content: center;
+    
+    
+}
+.coluna_conteudo {
+    width: 50%;
+    padding: 50px ;
+    text-align: center;
+}
+.input {
+    font-size: 18px;   
+    height: 40px;
+    width: 90%;
+    border-radius: 10px;
+    border-color: rgb(177, 177, 177);
+    border-width: 1px;
+    padding: 15px;
+    
+}
+.input_money {
+    font-size: 18px;   
+    height: 40px;
+    width: 80%;
+    border-radius: 10px;
+    border-color: rgb(177, 177, 177);
+    border-width: 1px;
+    padding: 15px;
+    
+}
+.input_money:hover, .input:hover {
+    border-color: rgb(177, 177, 177);
+    
+}
+.input_money:focus, .input:focus {
+    border-color: rgb(177, 177, 177);
+    outline: none;
+}
+.text_center {
+    text-align: justify;
+
+}
+.input_text {
+    margin-bottom: 0px;
+    font-size: 18px;
+    margin-left: 6%;
+    text-align: left;
+    
+}
+.div_input {
+    width: 100%;
+    height: 60px;
+   
+}
+.button {
+    width: 50%;
+    height: 40px;
+    margin-top: 30px;
+    background-color: orange;
+    color:  black;
+    font-size: 18px;
+    border-radius: 15px;
+    border: none;
+    
+}
+.div_money {
+    display: flex;
+    width: 100%;
+    margin-left: 5%;
+    height: 40px;
+
+}
+.text_money {
+    width: 10%;
+    height: 40px;
+    font-size: 16px;
+    
+}
+
